bindings/rust/libmem-sys/src/bindings.rs

extern "C" {
    #[doc = " Enumerates modules in a specified process and calls a callback function\n for each module found.\n\n @param process The process that the modules will be enumerated from.\n @param callback The callback function that will receive the current module in\n the enumeration and an extra argument. This function should return `LM_TRUE`\n to continue the enumeration, or `LM_FALSE` to stop it.\n @param arg An extra argument that is passed to the callback function. This allows\n you to provide additional information or context to the callback function when\n it is invoked during the enumeration of modules.\n\n @return Returns `LM_TRUE` if the enumeration succeeds, or `LM_FALSE` if it fails."]
    pub fn LM_EnumModulesEx(
        process: *const lm_process_t,
        callback: unsafe extern "C" fn(module: *mut lm_module_t, arg: *mut lm_void_t) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Finds a module by name and populates the `module_out` parameter with the found module information.\n\n @param name The name of the module to find (e.g `game.dll`). It can also be a\n relative path, such as `/game/hello` for a module at `/usr/share/game/hello`.\n @param module_out A pointer to a `lm_module_t` structure. This function populates\n this structure with information about the found module, containing information\n such as base, end, size, path and name.\n\n @return Returns `LM_TRUE` if the module is found successfully, otherwise it\n returns `LM_FALSE`."]
    pub fn LM_FindModule(name: lm_string_t, module_out: *mut lm_module_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Finds a module by name in a specified process and populates the `module_out` parameter with the found module information.\n\n @param process The process that the module will be searched in.\n @param name The name of the module to find (e.g `game.dll`). It can also be a\n relative path, such as `/game/hello` for a module at `/usr/share/game/hello`.\n @param module_out A pointer to a `lm_module_t` structure. This function populates\n this structure with information about the found module, containing information\n such as base, end, size, path and name.\n\n @return Returns `LM_TRUE` if the module is found successfully, otherwise it\n returns `LM_FALSE`."]
    pub fn LM_FindModuleEx(
        process: *const lm_process_t,
        name: lm_string_t,
        module_out: *mut lm_module_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Loads a module from a specified path into the current process.\n\n @param path The path of the module to be loaded.\n @param module_out A pointer to a `lm_module_t` type, which is used to store information\n about the loaded module (optional).\n\n @return Returns `LM_TRUE` is the module was loaded successfully, or `LM_FALSE` if it fails."]
    pub fn LM_LoadModule(path: lm_string_t, module_out: *mut lm_module_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Loads a module from a specified path into a specified process.\n\n @param process The process that the module will be loaded into.\n @param path The path of the module to be loaded.\n @param module_out A pointer to a `lm_module_t` type, which is used to store information\n about the loaded module (optional).\n\n @return Returns `LM_TRUE` is the module was loaded successfully, or `LM_FALSE` if it fails."]
    pub fn LM_LoadModuleEx(
        process: *const lm_process_t,
        path: lm_string_t,
        module_out: *mut lm_module_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Unloads a module from the current process.\n\n @param module The module that you want to unload from the process.\n\n @return Returns `LM_TRUE` if the module was successfully unloaded, and `LM_FALSE` if it fails."]
    pub fn LM_UnloadModule(module: *const lm_module_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " Unloads a module from a specified process.\n\n @param process The process that the module will be unloaded from.\n @param module The module that you want to unload from the process.\n\n @return Returns `LM_TRUE` if the module was successfully unloaded, and `LM_FALSE` if it fails."]
    pub fn LM_UnloadModuleEx(process: *const lm_process_t, module: *const lm_module_t)
        -> lm_bool_t;
}
extern "C" {
    #[doc = " Enumerates symbols in a module and calls a callback function for each symbol found.\n\n @param module The module where the symbols will be enumerated from.\n @param callback A function pointer that will receive each symbol in the enumeration and an extra argument.\n The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.\n @param arg A pointer to user-defined data that can be passed to the callback function.\n It allows you to provide additional information or context.\n\n @return Returns `LM_TRUE` if the enumeration succeeds, `LM_FALSE` otherwise."]
    pub fn LM_EnumSymbols(
        module: *const lm_module_t,
        callback: unsafe extern "C" fn(symbol: *mut lm_symbol_t, arg: *mut lm_void_t) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Finds the address of a symbol within a module.\n\n @param module The module where the symbol will be looked up from.\n @param symbol_name The name of the symbol to look up.\n\n @return Returns the address of the symbol, or `LM_ADDRESS_BAD` if it fails."]
    pub fn LM_FindSymbolAddress(
        module: *const lm_module_t,
        symbol_name: lm_string_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " Demangles a symbol name.\n\n @param symbol_name The symbol name to demangle.\n @param demangled_buf The buffer where the demangled symbol name will be stored.\n If this is `NULL`, the symbol will be dynamically allocated and `maxsize` is ignored.\n @param maxsize The maximum size of the buffer where the demangled symbol name will be stored.\n\n @return Returns a pointer to the demangled symbol string, or `NULL` if it fails.\n If the symbol was dynamically allocated, you need to free it with `LM_FreeDemangledSymbol`."]
    pub fn LM_DemangleSymbol(
        symbol_name: lm_string_t,
        demangled_buf: *mut lm_char_t,
        maxsize: lm_size_t,
    ) -> *mut lm_char_t;
}
extern "C" {
    #[doc = " Frees the memory allocated for a demangled symbol name.\n\n @param symbol_name The demangled symbol name to free."]
    pub fn LM_FreeDemangledSymbol(symbol_name: *mut lm_char_t);
}
extern "C" {
    #[doc = " Enumerates symbols in a module with demangled names and calls a provided callback function for each\n symbol found.\n\n @param module The module where the symbols will be enumerated from.\n @param callback A function pointer that will receive each demangled symbol in the enumeration and\n an extra argument. The callback function should return `LM_TRUE` to continue the enumeration or\n `LM_FALSE` to stop it.\n @param arg A pointer to user-defined data that can be passed to the callback function.\n It allows you to provide additional information or context.\n\n @return Returns `LM_TRUE` if the enumeration succeeds, `LM_FALSE` otherwise."]
    pub fn LM_EnumSymbolsDemangled(
        module: *const lm_module_t,
        callback: unsafe extern "C" fn(symbol: *mut lm_symbol_t, arg: *mut lm_void_t) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Finds the address of a demangled symbol within a module.\n\n @param module The module where the symbol will be looked up from.\n @param symbol_name The name of the symbol to look up.\n\n @return Returns the address of the symbol, or `LM_ADDRESS_BAD` if it fails."]
    pub fn LM_FindSymbolAddressDemangled(
        module: *const lm_module_t,
        symbol_name: lm_string_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " Enumerates the memory segments of the current process and invokes a callback function for each segment.\n\n @param callback A function pointer that will receive each segment in the enumeration and an extra argument.\n The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.\n @param arg A pointer to user-defined data that can be passed to the callback function.\n It allows you to provide additional information or context to the callback function when iterating over segments.\n\n @return The function returns `LM_TRUE` if the enumeration was successful, or `LM_FALSE` otherwise."]
    pub fn LM_EnumSegments(
        callback: unsafe extern "C" fn(
            segment: *mut lm_segment_t,
            arg: *mut lm_void_t,
        ) -> lm_bool_t,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Enumerates the memory segments of a given process and invokes a callback function for each segment.\n\n @param process A pointer to a structure containing information about the process whose segments\n will be enumerated.\n @param callback A function pointer that will receive each segment in the enumeration and an extra argument.\n The callback function should return `LM_TRUE` to continue the enumeration or `LM_FALSE` to stop it.\n @param arg A pointer to user-defined data that can be passed to the callback function.\n It allows you to provide additional information or context to the callback function when iterating over segments.\n\n @return The function returns `LM_TRUE` if the enumeration was successful, or `LM_FALSE` otherwise."]
    pub fn LM_EnumSegmentsEx(
        process: *const lm_process_t,
        callback: ::std::option::Option<
            unsafe extern "C" fn(segment: *mut lm_segment_t, arg: *mut lm_void_t) -> lm_bool_t,
        >,
        arg: *mut lm_void_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function `LM_FindSegment` searches for a memory segment that a given address is within and populates the\n `segment_out` parameter with the result.\n\n @param address The address to search for.\n @param segment_out A pointer to an `lm_segment_t` structure to populate with information about the\n segment that contains the specified address.\n\n @return The function returns `LM_TRUE` if the specified address is found within a segment, or `LM_FALSE` otherwise."]
    pub fn LM_FindSegment(address: lm_address_t, segment_out: *mut lm_segment_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function `LM_FindSegment` searches for a memory segment that a given address is within and populates the\n `segment_out` parameter with the result.\n\n @param process A pointer to a structure containing information about the process whose memory\n segments will be searched.\n @param address The address to search for.\n @param segment_out A pointer to an `lm_segment_t` structure to populate with information about the\n segment that contains the specified address.\n\n @return The function returns `LM_TRUE` if the specified address is found within a segment, or `LM_FALSE` otherwise."]
    pub fn LM_FindSegmentEx(
        process: *const lm_process_t,
        address: lm_address_t,
        segment_out: *mut lm_segment_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " Reads memory from a source address and copies it to a destination\n address.\n\n @param source The memory address from which data will be read.\n @param dest A pointer to a memory location where the data read from the\n source address will be stored.\n @param size The number of bytes to read from the memory starting at the\n source address and write into the dest buffer.\n\n @return The number of bytes read from memory."]
    pub fn LM_ReadMemory(source: lm_address_t, dest: *mut lm_byte_t, size: lm_size_t) -> lm_size_t;
}
